# rust-webvr

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  generate_aar.sh
examples/: room.rs
examples/room/: Cargo.toml  build.rs.bak  fake-ld.sh  run_android.sh
examples/room/android/: build.gradle  gradle.properties  settings.gradle
examples/room/android/app/: build.gradle
examples/room/android/app/src/daydream/: AndroidManifest.xml
examples/room/android/app/src/gearvr/: AndroidManifest.xml
examples/room/android/app/src/gearvr/assets/: oculussig_ce0117115311a4160c
examples/room/android/app/src/main/: AndroidManifest.xml
examples/room/android/app/src/main/assets/: recipes.json
examples/room/android/app/src/main/java/com/rust/webvr/: GLFrameLayout.java  GLWebView.java  MainActivity.java  Recipe.java  RecipeAdapter.java  SurfaceTextureRenderer.java
examples/room/android/app/src/main/res/drawable/: ic_edit_black.xml
examples/room/android/app/src/main/res/layout/: list_item_recipe.xml  recipes.xml  tab.xml  webview.xml
examples/room/android/app/src/main/res/values/: colors.xml  strings.xml
examples/room/android/app/src/svr/: AndroidManifest.xml
examples/room/android/gradle/wrapper/: gradle-wrapper.properties
examples/room/src/: main.rs
rust-webvr/: Cargo.toml  build.rs
rust-webvr-api/: Cargo.toml
rust-webvr-api/src/: jni_utils.rs  lib.rs  mock.rs  utils.rs  vr_display.rs  vr_display_capabilities.rs  vr_display_data.rs  vr_event.rs  vr_eye.rs  vr_eye_parameters.rs  vr_field_view.rs  vr_frame_data.rs  vr_framebuffer.rs  vr_future_frame_data.rs  vr_gamepad.rs  vr_layer.rs  vr_main_thread_heartbeat.rs  vr_pose.rs  vr_service.rs  vr_stage_parameters.rs
rust-webvr/src/: lib.rs  vr_manager.rs
rust-webvr/src/api/: mod.rs
rust-webvr/src/api/glwindow/: display.rs  heartbeat.rs  mod.rs  service.rs
rust-webvr/src/api/googlevr/: README.md  display.rs  gamepad.rs  mod.rs  service.rs
rust-webvr/src/api/googlevr/aar/: GVRService.aar
rust-webvr/src/api/googlevr/gradle/: Makefile  build.gradle  settings.gradle
rust-webvr/src/api/googlevr/gradle/gradle/wrapper/: gradle-wrapper.properties
rust-webvr/src/api/googlevr/gradle/src/main/java/com/rust/webvr/: GVRService.java
rust-webvr/src/api/magicleap/: display.rs  heartbeat.rs  magicleap_c_api.h  magicleap_c_api.rs  mod.rs  service.rs
rust-webvr/src/api/mock/: display.rs  mod.rs  service.rs
rust-webvr/src/api/oculusvr/: display.rs  gamepad.rs  mod.rs  service.rs
rust-webvr/src/api/oculusvr/aar/: OVRService.aar
rust-webvr/src/api/oculusvr/gradle/src/main/: AndroidManifest.xml
rust-webvr/src/api/oculusvr/gradle/src/main/java/com/rust/webvr/: OVRService.java
rust-webvr/src/api/openvr/: binding.rs  constants.rs  display.rs  gamepad.rs  library.rs  service.rs
rust-webvr/src/api/openxr/: display.rs  mod.rs  service.rs
rust-webvr/src/api/vrexternal/: display.rs  mod.rs  service.rs
rust-webvr/src/api/vrexternal/android/: display.rs  mod.rs  mozgfx.rs
rust-webvr/src/api/vrexternal/other/: mod.rs
src/: lib.rs  vr_compositor.rs  vr_device.rs  vr_display.rs  vr_display_capabilities.rs  vr_display_data.rs  vr_event.rs  vr_eye_parameters.rs  vr_field_view.rs  vr_frame_data.rs  vr_framebuffer.rs  vr_gamepad.rs  vr_layer.rs  vr_manager.rs  vr_pose.rs  vr_service.rs  vr_stage_parameters.rs
src/api/: jni_utils.rs  mod.rs  utils.rs
src/api/googlevr/: display.rs  gamepad.rs  jni_utils.rs  mod.rs  service.rs
src/api/googlevr/gradle/: build.gradle
src/api/googlevr/gradle/src/main/: AndroidManifest.xml
src/api/googlevr/gradle/src/main/java/com/rust/webvr/: GVRService.java
src/api/mock/: compositor.rs  device.rs  display.rs  mod.rs  service.rs
src/api/oculusvr/: display.rs  gamepad.rs  mod.rs  service.rs
src/api/oculusvr/gradle/: build.gradle  settings.gradle
src/api/oculusvr/gradle/src/main/java/com/rust/webvr/: OVRService.java
src/api/openvr/: compositor.rs  constants.rs  device.rs  display.rs  gamepad.rs  mod.rs  service.rs
