[package]
name = "webvr"
version = "0.1.0"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]

[features]
default = ["openvr", "mock"]
openvr = ["libloading"]
mock = []
serde-serialization = ["serde", "serde_derive"]

[dependencies]
log  = "0.3"
serde = { version = "0.8", optional = true }
serde_derive = { version = "0.8", optional = true }
time = "0.1"
libloading = { version = "0.3", optional = true }

[dev-dependencies]
# Only required to run examples
glium = "0.15"
cgmath = "0.12"
image = "0.10"