[package]
name = "rust-webvr"
version = "0.2.0"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]

homepage = "https://github.com/MortimerGoro/rust-webvr"
repository = "https://github.com/MortimerGoro/rust-webvr"
keywords = ["webvr", "openvr", "oculus", "headset", "vr"]
license = "MIT"

description = '''Safe rust API that provides a way to interact with Virtual Reality headsets 
and integration with vendor specific SDKs like OpenVR and Oculus. The API is inspired on the 
easy to use WebVR API but adapted to Rust design patterns'''

exclude = [
    "examples/*",
]

[features]
default = ["openvr", "mock"]
openvr = ["libloading"]
mock = []
serde-serialization = ["serde", "serde_derive"]

[dependencies]
log  = "0.3"
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }
time = "0.1"
libloading = { version = "0.3", optional = true }

[dev-dependencies]
# Only required to run examples
glium = "0.15"
cgmath = "0.12"
image = "0.10"