[package]
name = "rust-webvr"
version = "0.6.1"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]

homepage = "https://github.com/MortimerGoro/rust-webvr"
repository = "https://github.com/MortimerGoro/rust-webvr"
keywords = ["webvr", "openvr", "oculus", "headset", "vr"]
license = "MIT"

description = '''Safe rust API that provides a way to interact with Virtual Reality headsets 
and integration with vendor specific SDKs like OpenVR and Oculus. The API is inspired on the 
easy to use WebVR API but adapted to Rust design patterns'''

exclude = [
    "examples/*",
]

build = "build.rs"

[package.metadata.android]
package-name = "rust.webvr"

[features]
default = ["openvr", "mock", "googlevr"]
openvr = ["libloading"]
mock = []
googlevr = ["gvr-sys"]
oculusvr = ["ovr-mobile-sys"]
serde-serialization = ["serde", "serde_derive"]

[dependencies]
log  = "0.3"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
time = "0.1"
libloading = { version = "0.4", optional = true, default-features = false }
gvr-sys = { version = "0.5", optional = true }
ovr-mobile-sys = { version = "0.3.1", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_injected_glue = "0.2.2"

[build-dependencies]
gl_generator = "0.5.0"

