[package]
name = "rust-webvr-api"
version = "0.9.2"
authors = ["The Servo Project Developers"]

homepage = "https://github.com/servo/rust-webvr"
repository = "https://github.com/servo/rust-webvr"
keywords = ["webvr", "openvr", "oculus", "headset", "vr"]
license = "MPL-2.0"

description = '''Safe rust API that provides a way to interact with Virtual Reality headsets 
and integration with vendor specific SDKs like OpenVR and Oculus. The API is inspired on the 
easy to use WebVR API but adapted to Rust design patterns'''

[features]
default = ["utils", "jni_utils"]
utils = ["time"]
jni_utils = ["android_injected_glue"]
serde-serialization = ["serde", "serde_derive"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
time = { version = "0.1", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_injected_glue = { version = "0.2.2", optional = true }
