[package]
name = "rust-webvr"
version = "0.9.12"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]

homepage = "https://github.com/servo/rust-webvr"
repository = "https://github.com/servo/rust-webvr"
keywords = ["webvr", "openvr", "oculus", "headset", "vr"]
license = "MIT"

description = '''Safe rust API that provides a way to interact with Virtual Reality headsets 
and integration with vendor specific SDKs like OpenVR and Oculus. The API is inspired on the 
easy to use WebVR API but adapted to Rust design patterns'''

exclude = [
    "examples/*",
]

build = "build.rs"

[features]
default = ["openvr", "mock"]
openvr = ["libloading"]
mock = []
googlevr = ["gvr-sys"]
oculusvr = ["ovr-mobile-sys"]

[dependencies]
rust-webvr-api = { path = "../rust-webvr-api", version = "0.9.2" }
log  = "0.4"
libloading = { version = "0.5", optional = true, default-features = false }
gvr-sys = { version = "0.7", optional = true }
ovr-mobile-sys = { version = "0.4", optional = true }

[build-dependencies]
gl_generator = "0.10"
