[package]
name = "rust-webvr"
version = "0.12.1"
authors = ["The Servo Project Developers"]

homepage = "https://github.com/servo/rust-webvr"
repository = "https://github.com/servo/rust-webvr"
keywords = ["webvr", "openvr", "oculus", "headset", "vr"]
license = "MPL-2.0"

description = '''Safe rust API that provides a way to interact with Virtual Reality headsets 
and integration with vendor specific SDKs like OpenVR and Oculus. The API is inspired on the 
easy to use WebVR API but adapted to Rust design patterns'''

exclude = [
    "examples/*",
]

build = "build.rs"

[features]
default = ["vrexternal", "openvr", "mock"]
vrexternal = []
glwindow = ["euclid", "gleam", "glutin"]
openvr = ["libloading"]
mock = []
googlevr = ["gvr-sys"]
oculusvr = ["ovr-mobile-sys"]
magicleap = ["euclid", "gleam"]

[dependencies]
rust-webvr-api = { path = "../rust-webvr-api", version = "0.12.0" }
log  = "0.4"
gvr-sys = { version = "0.7", optional = true }
ovr-mobile-sys = { version = "0.4", optional = true }
libc = "0.2"
euclid = { version = "0.19", optional = true }
gleam = { version = "0.6", optional = true }
glutin = { version = "0.21", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
libloading = { version = "0.5", optional = true, default-features = false }

[build-dependencies]
gl_generator = "0.11"
bindgen = "0.49.0"
