[package]
name = "room_example"
version = "0.1.0"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]
build = "build.rs"

[dependencies]
glutin = "0.7.4"
gleam = "0.4"
cgmath = "0.12"
image = "0.12"
android_glue = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_injected_glue = {git = "https://github.com/mmatyas/android-rs-injected-glue"}

[dependencies.rust-webvr]
path = "../.."

[replace]
"glutin:0.7.4" = { path = "/home/mortimer/Projects/push/glutin" }
"winit:0.5.11" = { path = "/home/mortimer/Projects/push/winit_old/winit" }
