[package]
name = "room_example"
version = "0.1.0"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>"]
build = "build.rs"

[dependencies]
glutin = "0.19"
gleam = "0.4"
cgmath = "0.12"
image = "0.12"
android_glue = "0.2"
rust-webvr = { path = "../../rust-webvr" }

[target.'cfg(target_os = "android")'.dependencies]
android_injected_glue = {git = "https://github.com/mmatyas/android-rs-injected-glue"}

